# aisl

./: .aisl.analysis  .aisl.ffi-design  .aisl.grammar  .aisl.manifest.schema  .aisl.module-plan  .aisl.refactoring-plan  .gitignore  AGENTS.md  AISL-AGENT.md  AISL-CORE.md  BIGDECIMAL_IMPLEMENTATION.md  IMPLEMENTATION-STATUS.md  LANGUAGE_SPEC.md  README.md  TEST_STATUS.md  convert_syntax.sh  run_all_tests.sh  test_no_call.aisl  test_polymorphic_ops.aisl  test_type_dispatch.aisl
examples/: README.md  array_new_demo.aisl  echo_server.aisl  echo_terminal.aisl  final_server.aisl  hello_world.aisl  multi_print.aisl  sequential_server.aisl  simple_json_server.aisl  simple_server.aisl  simple_typed.aisl  sinatra.aisl  sinatra_debug.aisl  sinatra_demo.aisl  sinatra_recursive.aisl  sinatra_simple.aisl  test_server.aisl  typed_add.aisl  typed_math.aisl  working_server.aisl
extensions/: README.md
interpreter/: aisl.opam  ast.ml  bytecode.ml  dune  dune-project  interpreter.ml  lexer.ml  main.ml  parser.ml  sigil.opam  types.ml  vm.ml
modules/: array_utils.aisl  array_utils.aisl.manifest  conversion.aisl  conversion.aisl.manifest  filesystem.aisl  http.aisl  http.aisl.manifest  json.aisl.old  json_test.aisl  json_test.aisl.manifest  json_utils.aisl  json_utils.aisl.manifest  math.aisl  math.aisl.manifest  math_extended.aisl  math_extended.aisl.broken  math_extended.aisl.manifest  math_simple.aisl  network.aisl  string_utils.aisl  string_utils.aisl.manifest  text_utils.aisl  validation.aisl  validation.aisl.broken  validation.aisl.manifest  validation_simple.aisl.manifest
(+198 files in other folders)
