(lang dune 3.0)
(name sigil)
(version 1.0.0)

(generate_opam_files true)

(source (github anomalyco/sigil))
(license MIT)
(authors "Sigil Contributors")
(maintainers "marc@anomaly.co")

(package
 (name sigil)
 (synopsis "Sigil Interpreter and VM in OCaml")
 (description "A symbolic programming language designed for AI code generation, with a tree-walking interpreter in OCaml")
 (depends
  (ocaml (>= 4.14))
  dune))
